Updated and ready for grading

--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
   <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet"></head>
   <body>
 
-    <div class="main-nav">
+    <nav class="main-nav">
         <ul class="nav">
           <li class="name">Will Nock</li>
           <li><a href="index.html">Home</a></li>
           <li><a href="pages/experience.html">Experience</a></li>
+          <li><a href="pages/hobbies.html">Hobbies</a></li>
         </ul>
-    </div>
+      </nav>
 
     <header>
       <img src="images/willprofile.png" alt="Will Nock's Profile" class="profile-image">
@@ -23,15 +24,15 @@
     </header>
 
     <main class="flex">
-      <div class="card">
+      <section class="card">
         <h2 class="h2">My Background</h2>
         <p>I'm a maritime professional, specializing in compliance and regulatory issues for commercial ships and large megayachts. My expierience includes aframax tanker new build projects in South Korea, after construction surveys in China and VLCC to FPSO conversions in Dubai. I transferred to Ft. Lauderdale, FL USA in 2008 where I got involved in the yachting industry.</p>
         <p>Since then I have been primarily involved in the yachting industry, though I keep current on the commercial side.</p>
-      </div> 
+      </section> 
 
-      <div class="card">
+      <section class="card">
         <h2 class="h2">Goals</h2>
-        <p>I want to learn basic to intermediate coding skills to understand the needs of developers and be able to fit basic issues in my own business.  I would like to learn:</p>
+        <p>I want to learn basic to intermediate coding skills to understand the needs of developers and be able to fix basic issues in my own business.  I would like to learn:</p>
         <ul class="skills">
           <li>HTML</li>
           <li>CSS</li>
@@ -41,15 +42,14 @@
           <li>Swift</li>
           <li>And more!!!</li>
         </ul>
-        <p>I want create websites and web and iOS applications for the improvement of my current business and to start new business ventures.</p>
-      </div> 
+        <p>I want to create websites and web and iOS applications for the improvement of my current business and to start new business ventures.</p>
+      </section> 
 
     </main>
     <footer>
       <ul>
-        <li><a href="#" class="social twitter">Twitter</a></li>
-        <li><a href="#" class="social linkedin">LinkedIn</a></li>
-        <li><a href="#" class="social github">Github</a></li>
+        <li><a href="https://www.linkedin.com/in/willnock/" class="social linkedin" target="_blank">LinkedIn</a></li>
+        <li><a href="https://github.com/willnock-1983/" class="social github" target="_blank">Github</a></li>
       </ul>
       <p class="copyright">&copy; 2020, Will Nock</p>
     </footer>
